@@ -750,7 +750,7 @@
                                 if (strlen($rowEntry['comment']) < 11) {
                                     echo htmlPrep($rowEntry['comment']);
                                 } else {
-                                    echo "<span $style title='".htmlPrep($rowEntry['comment'])."'>".substr($rowEntry['comment'], 0, 10).'...</span>';
+                                    echo "<span $style title='".htmlPrep($rowEntry['comment'])."'>".mb_substr($rowEntry['comment'], 0, 10).'...</span>';
                                 }
                             }
                             echo '</td>';
